# FormatLab

./: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
scripts/: formatlab-dev.desktop.template  formatlab.desktop.template  install-desktop-entry.sh  launch-formatlab-dev.sh  launch-formatlab.sh
src/: formats.ts  main.ts  queue.ts  styles.css  theme.ts  updater.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs  registry.rs  util.rs
src-tauri/src/convert/: heic.rs  images.rs  mod.rs  office.rs  pdf.rs  text.rs
src-tauri/tests/: smoke.rs
